--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -47,10 +47,10 @@ The boxplots shows that for variable "goout", female who consumes more alchohol 
 I choose "studytime", "failures", "goout", "freetime" as four X variables, and fit them into the model which Y is "high_use" (high/low alcohol consumption). I also separate the data into male and female, in order to dig more into the data. Below are what I found from the model.
 
             Estimate Std. Error z value Pr(>|z|)    
-(Intercept) -2.36957    0.62399  -3.797 0.000146 ***
-studytime   -0.57481    0.16784  -3.425 0.000615 ***
+(Intercept) -2.36957    0.62399  -3.797 0.000146 
+studytime   -0.57481    0.16784  -3.425 0.000615 
 failures     0.19303    0.16899   1.142 0.253334    
-goout        0.70490    0.12039   5.855 4.77e-09 ***
+goout        0.70490    0.12039   5.855 4.77e-09 
 freetime     0.07209    0.13531   0.533 0.594163    
 
 coefficient:
