--- a/index.Rmd
+++ b/index.Rmd
@@ -11,24 +11,24 @@ output:
     fig_height: 4
 ---
 
-***
+<!-- *** -->
 
-```{r child = "chapter1.Rmd"}
-```
- 
-***
- 
-```{r child = "chapter2.Rmd"}
-```
-***
- 
-```{r child = "chapter3.Rmd"}
-```
- 
-***
- 
-```{r child = "chapter4.Rmd"}
-```
+<!-- ```{r child = "chapter1.Rmd"} -->
+<!-- ``` -->
+
+<!-- *** -->
+
+<!-- ```{r child = "chapter2.Rmd"} -->
+<!-- ``` -->
+<!-- *** -->
+
+<!-- ```{r child = "chapter3.Rmd"} -->
+<!-- ``` -->
+
+<!-- *** -->
+
+<!-- ```{r child = "chapter4.Rmd"} -->
+<!-- ``` -->
 
 ***
 
