--- a/index.Rmd
+++ b/index.Rmd
@@ -11,19 +11,19 @@ output:
     fig_height: 4
 ---
 
-<!-- *** -->
+***
 
-<!-- ```{r child = "chapter1.Rmd"} -->
-<!-- ``` -->
+```{r child = "chapter1.Rmd"}
+```
 
-<!-- *** -->
+***
 
-<!-- ```{r child = "chapter2.Rmd"} -->
-<!-- ``` -->
-<!-- *** -->
+```{r child = "chapter2.Rmd"}
+```
+***
 
-<!-- ```{r child = "chapter3.Rmd"} -->
-<!-- ``` -->
+```{r child = "chapter3.Rmd"}
+```
 
 <!-- *** -->
 
